--- a/MedTime/res/layout/activity_log_in.xml
+++ b/MedTime/res/layout/activity_log_in.xml
@@ -2,44 +2,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.proiect.medtime.LogIn" >
 
-    <EditText
-        android:id="@+id/editText_username"
+    <Button
+        android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/editText_username"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:ems="10"
-        android:hint="@string/user" >
-
-        <requestFocus />
-    </EditText>
+        android:text="@string/login" />
 
     <EditText
         android:id="@+id/editText_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText_username"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="176dp"
         android:ems="10"
         android:hint="@string/pass"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/button_login"
+    <EditText
+        android:id="@+id/editText_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText_username"
-        android:layout_below="@+id/editText_password"
-        android:layout_marginLeft="47dp"
-        android:layout_marginTop="44dp"
-        android:text="@string/login" />
+        android:layout_alignBottom="@+id/editText_password"
+        android:layout_alignRight="@+id/editText_password"
+        android:layout_marginBottom="43dp"
+        android:ems="10"
+        android:hint="@string/user" />
 
 </RelativeLayout>
