--- a/MedTime/res/layout/activity_log_in.xml
+++ b/MedTime/res/layout/activity_log_in.xml
@@ -9,33 +9,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.proiect.medtime.LogIn" >
 
-    <Button
-        android:id="@+id/button_login"
+    <EditText
+        android:id="@+id/editText_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText_username"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/login" />
+        android:layout_marginTop="58dp"
+        android:ems="10"
+        android:hint="@string/user" >
+
+        <requestFocus />
+    </EditText>
 
     <EditText
         android:id="@+id/editText_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/editText_username"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="176dp"
         android:ems="10"
         android:hint="@string/pass"
         android:inputType="textPassword" />
 
-    <EditText
-        android:id="@+id/editText_username"
+    <Button
+        android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText_password"
-        android:layout_alignRight="@+id/editText_password"
-        android:layout_marginBottom="43dp"
-        android:ems="10"
-        android:hint="@string/user" />
+        android:layout_below="@+id/editText_password"
+        android:layout_centerHorizontal="true"
+        android:text="@string/login" />
 
 </RelativeLayout>
