--- a/MedTime/res/layout/activity_pacienti.xml
+++ b/MedTime/res/layout/activity_pacienti.xml
@@ -7,5 +7,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.proiect.medtime.Pacienti" >
+    
+    <ListView android:id="@+id/lista"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </ListView>
+    
 
 </RelativeLayout>
