--- a/MedTime/res/menu/pacienti.xml
+++ b/MedTime/res/menu/pacienti.xml
@@ -2,10 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.proiect.medtime.Pacienti" >
 
+  
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_addPacient"
+        android:icon="@android:drawable/ic_menu_add"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/addPacients"/>
+    
+    <item android:id="@+id/action_back" 
+        android:icon="@android:drawable/ic_media_previous" 
+        android:title="@string/goBack"
+        android:showAsAction="always|withText"
+        android:visible="true"/>
 
 </menu>
