--- a/MedTime/res/layout/activity_consultatii.xml
+++ b/MedTime/res/layout/activity_consultatii.xml
@@ -2,10 +2,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.proiect.medtime.Consultatii" >
+    android:background="#00FFC4"
+    android:orientation="horizontal"
+    android:id="@+id/layout_consultatii" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+         />
+
+    <ImageButton
+        android:id="@+id/butonConsultatiiBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/back_button" />
+
+    <ImageButton
+        android:id="@+id/butonConsultatiiForward"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/forward_button" />
+
+    
 </RelativeLayout>
